fix validazione e fase di test

--- a/Relazione/sezioni/Appendice.tex
+++ b/Relazione/sezioni/Appendice.tex
@@ -7,11 +7,12 @@
 
     \section{Strumenti utilizzati}
     \begin{itemize}
-        \item \textbf{GitHub:} per il versionamento; 
-        \item \textbf{Visual Studio Code:} editor per la scrittura del codice; 
-        \item \textbf{XAMPP:} per testare sopratutto la parte dinamica del sito (PHP e SQL);
-        \item \textbf{Draw.io:} usato per UML e bozza grafica del sito;
-        \item \textbf{Telegram:} per le comunicazioni interne al gruppo;
-        \item \textbf{\LaTeX:} per la stesura della relazione.
+        \item \textbf{GitHub}: per il versionamento; 
+        \item \textbf{Visual Studio Code}: editor per la scrittura del codice; 
+        \item \textbf{XAMPP}: per testare sopratutto la parte dinamica del sito (PHP e SQL);
+        \item \textbf{Total Validator}: per la validazione del codice HTML e CSS;
+        \item \textbf{Draw.io}: usato per UML e bozza grafica del sito;
+        \item \textbf{Telegram}: per le comunicazioni interne al gruppo;
+        \item \textbf{\LaTeX}: per la stesura della relazione.
     \end{itemize}
 \pagebreak
