--- a/Relazione/sezioni/Presentazione.tex
+++ b/Relazione/sezioni/Presentazione.tex
@@ -3,20 +3,20 @@
     Così facendo siamo riusciti ad ottenere un sito accessibile su ogni dispositivo, grazie anche all' utilizzo di media query che vanno a rendere il design del sito scalabile e accessibile.
     
     \subsection{Presentazione Generale}
-    Questa breve sezione descrivera quello che è lo scheletro comune a tutte le pagine del sito.
-    Tutte le pagine presentano, uno sfonfo giallastro(hex #FFE4C4) nella parte esterna al body, il logo della concessionaria in cima alla pagina con la possibilità di cliccarlo per venire reindirizzati alla home, appeno sotto di esso si potrà trovare il menu. Il menu è strutturato nella forma classica con una visualizzazione orrizontale di tutte le voci principali, la presentazione del menu cambiera quando utilizzato da mobile(vedere sezione "Differenze mobile vs desktop"). In fondo alla pagina si potra infine trovare il footer che ha il principale compito di contenere la dicitura per il copyright.
+    Questa breve sezione descriverà quello che è lo scheletro comune a tutte le pagine del sito.
+    Tutte le pagine presentano, uno sfondo giallastro nella parte esterna al body, il logo della concessionaria in cima alla pagina con la possibilità di cliccarlo per venire reindirizzati alla home, appeno sotto di esso si potrà trovare il menu. Il menù è strutturato nella forma classica con una visualizzazione orizzontale di tutte le voci principali, la presentazione del menu cambierà quando utilizzato da mobile(vedere sezione "Differenze mobile vs desktop"). In fondo alla pagina si potrà infine trovare il footer che ha il principale compito di contenere la dicitura per il copyright. %(hex #FFE4C4)
 
     \subsection{Principali differenze mobile vs desktop}
-    Le seguenti sezioni delinearanno le differenze più importanti che si possono osservare nella struttura delle pagine mobile rispetto alla loro controparte desktop, queste modifiche sono state implementate con l'intento di garantire una visualizzazione facile e pulita del sito da mobile.
+    Le seguenti sezioni delineeranno le differenze più importanti che si possono osservare nella struttura delle pagine mobile rispetto alla loro controparte desktop, queste modifiche sono state implementate con l'intento di garantire una visualizzazione facile e pulita del sito da mobile.
 
         \subsubsection{Menu mobile}
-        Le voci del menu saranno nascoste, per visualizzarle bastera cliccare sul burger menu in alto a destra ed esse compariranno in un menu a tendina.
+        Le voci del menu saranno nascoste, per visualizzarle basterà cliccare sul burger menu in alto a destra ed esse compariranno in un menu a tendina.
 
         \subsubsection{Home mobile}
         Nella Home l'immagine della concessionaria non viene più visualizzata affianco al testo ma sopra di esso.
 
         \subsubsection{Veicoli a noleggio e Veicoli in vendita mobile}
-        I vari filtri di ricerca per le auto verranno visualizzati in blocchi quindi ognuno occupera un intera riga inclusi il bottone per il submit è quello per ricaricare la pagina.
+        I vari filtri di ricerca per le auto verranno visualizzati in blocchi quindi ognuno occuperà un intera riga inclusi il bottone per il submit è quello per ricaricare la pagina.
 
         \subsubsection{Area personale ed Area amministratore}
         Il menu utente ed il menu amministratore non saranno più alla sinistra del contenuto ma sopra di esso.
