--- a/Relazione/sezioni/SuddivisioneLavoro.tex
+++ b/Relazione/sezioni/SuddivisioneLavoro.tex
@@ -7,6 +7,7 @@ Di seguito si elencano le parti realizzate da ciascun componente del gruppo:
         \item CSS pagine HTML ;
         \item script PHP: ;
         \item pagine PHP: ;
+        \item funzioni JS: .
         \end{enumerate}
     \item Corrò Giacomo:
         \begin{enumerate}
@@ -14,31 +15,32 @@ Di seguito si elencano le parti realizzate da ciascun componente del gruppo:
             \item CSS pagine HTML noleggioAcquista, noleggioVeicolo e paginaVuota, parte del CSS del menù, CSS stampa pagine relative ai veicoli;
             \item script PHP: acquistaVeicoloFn, noleggiaVeicoloFn, funzioniVeicoli, parte di funzioniGenerali;
             \item pagine PHP: acquistaVeicoli, noleggioVeicoli, noleggioVeicolo, paginaVuota, pagina404;
-            \item funzioni JS veicoli.js;
+            \item funzioni JS: veicoli.
         \end{enumerate}
     \item Fiorese Giulia:
         \begin{enumerate}
-            \item pagine HTML: ;
-            \item CSS pagine HTML;
-            \item script PHP: ;
-            \item pagine PHP: ;
+            \item pagine HTML: homeAmministratore, infoAmministratore, listaNoleggiAmministratore, messaggiAmministratore, modificaInfoAmministratore, modificaVeicoloNoleggio, modificaVeicoloVendita, nuovoVeicoloNoleggio, nuovoVeicoloVendita, rispostaMessaggioAmministratore, veicoliNoleggioAmministratore, veicoliVenditaAmministratore;
+            \item CSS pagine HTML: cssAmministratore, cssAmmMobile, cssAmmPrint;
+            \item script PHP: parte di controlloInput, eliminaMessaggiAmministratore, eliminaPrenotazioneAmministratore, eliminaVeicoloNoleggio, eliminaVeicoloVendita, funzioniAmministratore, salvaInformazioniModificate, salvaNuovoVeicoloNoleggio, salvaNuovoVeicoloVendita, salvaRispostaAmministratore, salvaVeicoloNoleggioModificato, salvaVeicoloVenditaModificato;
+            \item pagine PHP: homeAmministratore, infoAmministratore, listaNoleggiAmministratore, messaggiAmministratore, modificaInfoAmministratore, modificaVeicoloNoleggio, modificaVeicoloVendita, nuovoVeicoloNoleggio, nuovoVeicoloVendita, rispostaMessaggioAmministratore, veicoliNoleggioAmministratore, veicoliVenditaAmministratore;
+            \item funzioni JS: parte di controlliClient.
         \end{enumerate}
     \item Tabacchi Erik:
         \begin{enumerate}
-            \item pagine HTML: home.html, contatti.html;
+            \item pagine HTML: home, contatti;
             \item CSS pagine HTML: home, contatti, css stampa home e contatti, parte del css generale;
-            \item script PHP: invioMessaggio.php, parte di funzioniGenerali.php;
-            \item pagine PHP: home.php, contatti.php;
-            \item funzioni JS: controlloIframe.js, funzioni tasto di scroll-up;
+            \item script PHP: invioMessaggio, parte di funzioniGenerali;
+            \item pagine PHP: home, contatti;
+            \item funzioni JS: controlloIframe, funzioni tasto di scroll-up;
             \item database.
         \end{enumerate}
 \end{itemize}
 Per quanto riguarda la relazione, ognuno ha scritto la parte di analisi relativa alla propria sezione del sito. Le parti generali della relazione sono state scritte da tutti i membri del gruppo.
 Vengono elencate nel dettaglio le varie parti:
 \begin{itemize}
-    \item Riccardo Conte:
-    \item Giacomo Corrò:
-    \item Giulia Fiorese:
+    \item Riccardo Conte: 
+    \item Giacomo Corrò: 
+    \item Giulia Fiorese: sezione 1 Introduzione, parte della sezione 3.3 Accessibilità, sezione 7 Validazione e Fase di Test; 
     \item Erik Tabacchi:
 \end{itemize}
 Tutte le parti della relazione non elencate sono state scritte durante gli incontri, quindi tutto il gruppo ha preso parte alla stesura.
