--- a/Relazione/sezioni/FaseDiProgettazione.tex
+++ b/Relazione/sezioni/FaseDiProgettazione.tex
@@ -19,14 +19,14 @@
                 \item Noleggi;
                 \item Messaggi.
             \end{itemize}
-            \item Area privata (utente amministratore):
-                \begin{itemize}
-                    \item Home amministratore;
-                    \item Messaggi;
-                    \item Veicoli a noleggio;
-                    \item Veicoli in vendita;
-                    \item Prenotazione veicoli.
-                \end{itemize}
+        \item Area privata (utente amministratore):
+            \begin{itemize}
+            	\item Home amministratore;
+                 \item Messaggi;
+                 \item Veicoli a noleggio;
+                 \item Veicoli in vendita;
+                 \item Prenotazione veicoli.
+            \end{itemize}
     \end{itemize}
 
     \subsection{Database}
@@ -53,10 +53,10 @@
     Di seguito l'elenco dei più importanti:
     \begin{itemize}
         \item i breadcrumb, che indicano sempre all'utente la posizione nel sito;
-        \item tutti i form sono provvisti di una legenda;
-        \item attributo alt nelle immagini, che rende disponibile un testo alternativo in caso in cui l’immagine non venga caricata o l'utente non sia in grado di vederla. Nel caso delle immagini dei veicoli, la descrizione è inserita nel momento in cui viene registrato un nuovo veicolo ed è obbligatoria.
+        \item tutti i form sono provvisti di una legenda e sono stati utilizzati i tag label per una migliore interpretazione dei singoli campi;
+        \item l'attributo alt nelle immagini, che rende disponibile un testo alternativo in caso in cui l’immagine non venga caricata o l'utente non sia in grado di vederla. Nel caso delle immagini dei nuovi veicoli, la descrizione è inserita nel momento in cui viene registrato tale veicolo ed è un dato obbligatorio per la registrazione;
         \item link per saltare l'header e il menù di navigazione, nascosti di default ma visibili agli screen reader. Sono posti come primi link della pagina e consentono di navigare direttamente al contenuto della pagina;
         \item pulsante "TOP", sotto forma di bottone sempre visibile, che si trova a lato del content: se cliccato, ti porta all’inizio del content. Utile per evitare lo scroll e velocizzare la navigazione;
-        \item colori ad elevato contrasto, almeno livello AA del WCAG 2.1, verificato attraverso un apposito software;
+        \item colori ad elevato contrasto, almeno livello AA del WCAG 2.1, verificato attraverso un apposito software.
     \end{itemize}
 \pagebreak
