fix parte relazione + qualche errore di battitura

--- a/Relazione/sezioni/FaseDiImplementazione.tex
+++ b/Relazione/sezioni/FaseDiImplementazione.tex
@@ -2,7 +2,7 @@
 
 Il punto di partenza dello sviluppo è stato la creazione del Database in SQL e delle pagine in HTML, definendo header, footer e menu congiuntamente, e le singole pagine separatamente. Sin da questo momento il codice HTML è stato ripetutamente validato ad ogni suo aggiornamento. Successivamente le pagine HTML sono state convertite in pagine PHP nelle quali il contenuto viene generato a partire dal database.
 Il passo successivo è stato appunto scrivere tali funzioni PHP per l’interazione con il database e la conseguente resa delle pagine, divise a seconda dell'ambito dell'estrazione in diversi file "funzioni". Completano la parte PHP altri file atti a interazioni più specifiche, quali salvataggi ed eliminazioni di dati, controllo degli input, invio di messaggi e login.
-Ciò ha reso l’attivita di debug molto più veloce e mirata ma ha anche permesso di gestire al meglio eventuali errori di inserimento dei dati da parte dell’utente, fornendo messaggi d’errore precisi. In seguito, i controlli sulla validità degli input dei form, sono stati tradotti in JavaScript, in modo da effettuare un primo controllo client side.
+Ciò ha reso l’attività di debug molto più veloce e mirata ma ha anche permesso di gestire al meglio eventuali errori di inserimento dei dati da parte dell’utente, fornendo messaggi d’errore precisi. In seguito, i controlli sulla validità degli input dei form, sono stati tradotti in JavaScript, in modo da effettuare un primo controllo client side.
 L’ultima parte della realizzazione è stata aggiungere la presentazione al sito tramite fogli CSS, avendo cura che la visualizzazione del sito fosse la stessa su vari dispositivi desktop. Per quando riguarda l’aspetto mobile, abbiamo apportato modifiche di layout in modo da rendere il sito accessibile anche da smartphone.
 Tra gli strumenti utilizzati dai componenti del gruppo per l'implementazione si evidenziano:
 \begin{itemize}
