--- a/Relazione/sezioni/Presentazione.tex
+++ b/Relazione/sezioni/Presentazione.tex
@@ -1,6 +1,6 @@
 \section{Presentazione}
     Per la presentazione del sito abbiamo utilizzato il linguaggio CSS usufruendo quasi esclusivamente di misure relative come em e percentuali e cercando di ridurre al minimo l'utilizzo di misure statiche come i px per creare un design fluido e che sia facilmente usufruibile da mobile.
-    Così facendo siamo riusciti ad ottenere un sito accessibile su ogni dispositivo, grazie anche all' utilizzo di media query che vanno a rendere il design del sito scalabile e accessibile.
+    Così facendo siamo riusciti ad ottenere un sito accessibile su ogni dispositivo, grazie anche all'utilizzo di media query che vanno a rendere il design del sito scalabile e accessibile.
     
     \subsection{Presentazione Generale}
     Questa breve sezione descriverà quello che è lo scheletro comune a tutte le pagine del sito.
@@ -22,7 +22,7 @@
         Il menu utente ed il menu amministratore non saranno più alla sinistra del contenuto ma sopra di esso.
     
     \subsection{CSS Print}
-        Il compito di gestire la presentazione della maggior parte delle pagine durante la stampa è stato affidato al file cssPrint.css, esso elimina tutti gli elementi visivi non necessari durante una stampa come il logo, il footer, i menu, i colori di background e le immagini che non hanno valore informativo in modo da ottenere un stampa il più efficente possibile .
+        Il compito di gestire la presentazione della maggior parte delle pagine durante la stampa è stato affidato al file cssPrint.css, esso elimina tutti gli elementi visivi non necessari durante una stampa come il logo, il footer, i menu, i colori di background e le immagini che non hanno valore informativo in modo da ottenere un stampa il più efficiente possibile.
         Vi sono inoltre alcune pagine a cui sono stati dedicati dei fogli di stile aggiuntivi per gestire situazioni di stampa a loro specifiche.
 
 
