--- a/Relazione/sezioni/Analisi.tex
+++ b/Relazione/sezioni/Analisi.tex
@@ -6,7 +6,7 @@
     \subsection{Casi d'uso}
 
         \subsubsection{Utente generico}
-        L’utente viene definito generico nel momento in cui può solo navigare all’interno del sito, senza alcun permesso di accedere all’area riservata, richiere preventivi o effettuale noleggio di automobili.
+        L’utente viene definito generico nel momento in cui può solo navigare all’interno del sito, senza alcun permesso di accedere all’area riservata, richiedere preventivi o effettuare noleggio di automobili.
         L’utente generico dispone dei seguenti casi d’uso:
         \begin{itemize}
             \item Visualizzazione pagina "Home";
@@ -25,15 +25,15 @@
         Prevede 2 sezioni:
         \begin{enumerate}
             \item Una breve presentazione della concessionaria e delle politiche aziendali; 
-            \item una sezione che conterra l'occasione del giorno;
+            \item una sezione che conterrà l'occasione del giorno;
             \end{enumerate}
         Se si desidera raggiungere la homepage mentre si sta visitando una pagina interna del sito, è possibile cliccare sulla voce home del menù oppure sul titolo/logo presente nell'header.
 
         \paragraph{Visualizzazione pagina "Veicoli a noleggio"}
-        In questa pagina vengono visualizzati i veicoli disponibili per il noleggio. L'utente può esegueguire una ricerca attraverso l'apposita sezione "Filtri di ricerca". Nel caso in cui l'utente provasse a noleggiare un veicolo, non essendo autenticato, gli verrà mostrato un messaggio d'errore.
+        In questa pagina vengono visualizzati i veicoli disponibili per il noleggio. L'utente può eseguire una ricerca attraverso l'apposita sezione "Filtri di ricerca". Nel caso in cui l'utente provasse a noleggiare un veicolo, non essendo autenticato, gli verrà mostrato un messaggio d'errore.
 
         \paragraph{Visualizzazione pagina "Veicoli in vendita"}
-        In questa pagina vengono visualizzati i veicoli disponibili per l'acquisto. L'utente può esegueguire una ricerca attraverso l'apposita sezione "Filtri di ricerca". Nel caso in cui l'utente provasse a richiedere un preventivo per un veicolo, non essendo autenticato, gli verrà mostrato un messaggio d'errore.
+        In questa pagina vengono visualizzati i veicoli disponibili per l'acquisto. L'utente può eseguire una ricerca attraverso l'apposita sezione "Filtri di ricerca". Nel caso in cui l'utente provasse a richiedere un preventivo per un veicolo, non essendo autenticato, gli verrà mostrato un messaggio d'errore.
 
         \paragraph{Visualizzazione pagina "Contatti"}
         L’utente generico accede alla pagina Contatti cliccando la sezione Contatti presente nella navbar; questa è l'unica pagina che è stata dichiarata come HTML 5 nel sito dato che al suo interno si trova una mappa importata da google maps. La pagina offre informazioni e servizi utili all’utente come:
@@ -54,7 +54,7 @@
         L’utente viene definito autenticato nel momento in cui ha effettuato l'accesso al sito con le proprie credenziali.
         L’utente autenticato dispone dei degli stessi casi casi d’uso dell'utente generico con l'aggiunte dei seguenti
         \begin{itemize}
-            \item Accesso all'area presonale
+            \item Accesso all'area personale
             \begin{itemize}
                 \item Visualizzazione pagina "Dati Personali";
                 \item Modificare i dati personali;
@@ -72,22 +72,23 @@
         L'utente autenticato può acquistare un veicolo visitando la pagina "Veicoli in vendita" e cliccando l'apposito pulsante posto in corrispondenza del veicolo desiderato.
 
         \paragraph{Noleggio di un veicolo}
-        L'utente autenticato può noleggiare un veicolo visitando la pagina "Veicoli a noleggio" e cliccando l'apposito pulsante posto in corrispondenza del veicolo desiderato. Verrà rendindirizzato in una pagina in cui dovrà inserire le date di inizio e fine del pediodo di noleggio; in caso di date incoerenti o indisponibilità del veicolo, all'utente verrà mostrato un messaggio d'errore.
+        L'utente autenticato può noleggiare un veicolo visitando la pagina "Veicoli a noleggio" e cliccando l'apposito pulsante posto in corrispondenza del veicolo desiderato. Verrà reindirizzato in una pagina in cui dovrà inserire le date di inizio e fine del periodo di noleggio; in caso di date incoerenti o indisponibilità del veicolo, all'utente verrà mostrato un messaggio d'errore.
 
         \subsubsection{Utente amministratore}
         Il sistema riconosce l’amministratore tramite il flag presente e modificabile solo dal database.
         L’accesso avviene tramite login classica con email e password.
-        L’utente autenticato come amministratore dispone degli stessi casi casi d’uso dell'utente generico con l'aggiunta delle seguenti funzionalità
+        L’utente autenticato come amministratore dispone degli stessi casi casi d’uso dell'utente generico con l'aggiunta delle seguenti funzionalità:
         \begin{itemize}
-            \item Accesso all'area presonale dell'amministratore;
-            \item Vedere e modificare le proprie informazioni personali;
-            \item Visualizzare la lista dei veicoli a noleggio e in vendita;
-            \item Visualizzare ed eliminare le prenotazioni dei veicoli a noleggio;
-            \item Aggiungere, modificare ed eliminare un veicolo;
-            \item Visualizzare la lista completa dei messaggi e delle eventuali risposte inviate;
-            \item Rispondere ai messaggi ricevuti.
+            \item accesso all'area personale dell'amministratore;
+            \item vedere e modificare le proprie informazioni personali;
+            \item visualizzare la lista dei veicoli a noleggio e in vendita;
+            \item aggiungere, modificare ed eliminare un veicolo a noleggio e in vendita;
+            \item visualizzare ed eliminare le prenotazioni dei veicoli a noleggio;
+            \item visualizzare la lista completa dei messaggi e delle eventuali risposte inviate;
+            \item rispondere ai messaggi ricevuti.
         \end{itemize}
 
-        \paragraph{Area amministratore} L'area privata dell'utente amministratore presenta due importanti funzionalità: l'inserimento e la cancellazione di un auto. Per l'inserimento è sufficiente cliccare sui pulsanti presenti nelle "Azioni Rapide", mentre nelle sottosezioni dell'area amministrazione l'amministrazione può consultare ed eliminare i dati presenti nel database. Può inoltre consultare gli acquisti e i messaggi di tutti gli utenti registrati. \\
-        \textbf{Note:} questa parte del sito, nonostante sia molto simili per funzionalità all'area personale di un utente generico, presenta dei colori diversi proprio per contraddistinguerla.  
+        \paragraph{Area amministratore} L'utente registrato come amministratore può accedere all'area a lui dedicata eseguendo il login o, se l'accesso è già stato eseguito, cliccando nella voce del menù dedicata. L'area personale dell'utente amministratore presenta due importanti funzionalità: l'inserimento di un nuovo veicolo e la cancellazione di un veicolo già presente. Nelle sottosezioni dedicate, l'amministratore può aggiungere, consultare, modificare ed eliminare i dati dei veicoli presenti, può consultare le prenotazioni dei noleggi e tutti i messaggi.\\
+        \\
+        \textbf{Nota}: questa parte del sito, nonostante sia molto simili per funzionalità all'area personale di un utente registrato, presenta dei colori diversi proprio per contraddistinguerla da quest'ultima.  
 \pagebreak
