--- a/Relazione/sezioni/Appendice.tex
+++ b/Relazione/sezioni/Appendice.tex
@@ -10,8 +10,8 @@
         \item \textbf{GitHub}: per il versionamento; 
         \item \textbf{Visual Studio Code}: editor per la scrittura del codice; 
         \item \textbf{XAMPP}: per testare sopratutto la parte dinamica del sito (PHP e SQL);
-        \item \textbf{Total Validator}: per la validazione del codice HTML e CSS;
         \item \textbf{Draw.io}: usato per UML e bozza grafica del sito;
+        \item \textbf{Zoom}: per gli incontri virtuali tra i membri del gruppo;
         \item \textbf{Telegram}: per le comunicazioni interne al gruppo;
         \item \textbf{\LaTeX}: per la stesura della relazione.
     \end{itemize}
