--- a/Relazione/sezioni/ValidazioneTest.tex
+++ b/Relazione/sezioni/ValidazioneTest.tex
@@ -24,7 +24,7 @@ Sono stati effettuati test manuali anche per la versione mobile utilizzando diff
 \begin{itemize}
 	% per favore aggiungete il vostro dispositivo
 	\item Asus Zenfone 3 Max, con sistema operativo Android 7.0;
-	\item ;
+	\item Blackview bv9000, con sistema operativo Android 7.1.1 ;
 	\item ;
 	\item .
 \end{itemize}
