--- a/Relazione/sezioni/SuddivisioneLavoro.tex
+++ b/Relazione/sezioni/SuddivisioneLavoro.tex
@@ -27,11 +27,11 @@ Di seguito si elencano le parti realizzate da ciascun componente del gruppo:
         \end{enumerate}
     \item Tabacchi Erik:
         \begin{enumerate}
-            \item pagine HTML: home, contatti;
-            \item CSS pagine HTML: home, contatti, css stampa home e contatti, parte del css generale;
-            \item script PHP: invioMessaggio, parte di funzioniGenerali;
-            \item pagine PHP: home, contatti;
-            \item funzioni JS: controlloIframe, funzioni tasto di scroll-up;
+            \item pagine HTML: home.html, contatti.html;
+            \item CSS pagine HTML: cssHome.css, cssContatti.css, css stampa home e contatti, parte del css generale;
+            \item script PHP: invioMessaggio.php, connessioneDB.php, parte di funzioniGenerali;
+            \item pagine PHP: home.php, contatti.php;
+            \item funzioni JS: controlloIframe.js, funzioni tasto di scroll-up;
             \item database.
         \end{enumerate}
 \end{itemize}
