--- a/Relazione/sezioni/ValidazioneTest.tex
+++ b/Relazione/sezioni/ValidazioneTest.tex
@@ -35,5 +35,41 @@ L’usabilità del sito web rimane invariata, essendo quest’ultimo responsive,
 A partire dalla struttura in HTML si è cercato di rendere più efficiente la navigazione del sito tramite l'inserimento gli attributi "tabindex", per dare un ordine prioritario alle tabulazioni e permettere di saltare agevolmente sezioni della pagina tramite l'utilizzo di ancore. Tutte le immagini sono state marcate con appositi tag alt per la comprensione delle immagini anche a chi non può vedere. Inoltre ogni link è distinguibile dagli altri elementi tramite la sottolineatura e viene visualizzato in colori diversi in se ancora da visitare o già visitato. Un ulteriore aiuto viene fornito dai breadcrumb, che permette all'utente di capire in che parte del sito si trova. Per quanto riguarda l'accessibilità per alcune categorie di utenza con relative difficoltà visive si è scelto di mantenere sempre un alto contrasto tra il colore di sfondo ed il colore delle scritte, per non intaccare la leggibilità delle ultime.\\
 In particolare sono stati eseguiti dei test di cui si riportano di seguito alcune immagini di viste delle pagine del sito realizzato con la simulazione di diverse tipologie di daltonismo. Tali immagini sono state generate con l'utilizzo del simulatore Coblis, disponibile online al link \url{https://www.color-blindness.com/coblis-color-blindness-simulator/}.
 
+	\subsection{Strumenti per la validazione}
+	Tutte le pagine e il relativo codice sono stati sottoposti alla validazione attraverso i seguenti strumenti:
+	\begin{itemize}
+		\item Total Validator, disponibile per il download al sito ufficiale \url{https://www.totalvalidator.com/};
+		\item validatore W3C per il CSS, disponibile online al link \url{https://jigsaw.w3.org/css-validator/};
+		\item validatore W3C per l'HTML, disponibile online al link \url{https://validator.w3.org/};
+		\item Colour Contrast Analyser per l'analisi dei colori utilizzati, disponibile per il download al sito ufficiale italiano \url{https://www.webaccessibile.org/} o disponibile online al link \url{https://webaim.org/resources/contrastchecker/}.
+	\end{itemize}
+	\textbf{Nota}: la validazione del codice HTML è stata fatta incollando direttamente il codice sorgente prodotto dalle pagine PHP nel validatore, in modo tale da poter validare tutto quel codice non presente nelle pagine in HTML.
+	
+	\subsection{Strumenti per la fase di test}
+	L'intero sito è stato testato manualmente sui seguenti browser da desktop:
+	\begin{itemize}
+		\item Safari;
+		\item Microsoft Internet Explorer/Edge;
+		\item Microsoft Edge (beta) basato su Chromium;
+		\item Google Chrome;
+		\item Mozilla Firefox.
+	\end{itemize}
+	Sono stati effettuati test manuali anche per la versione mobile utilizzando differenti browser mobile. In particolare sono stati utilizzati i dispositivi:
+	\begin{itemize}
+		% per favore aggiungete il vostro dispositivo
+		\item Asus Zenfone 3 Max, con sistema operativo Android 7.0;
+		\item ;
+		\item ;
+		\item .
+	\end{itemize}
+	L’usabilità del sito web rimane invariata, essendo quest’ultimo responsive, anche se presenta layout o comportamenti differenti per cause che dipendono dal sistema operativo. Per tale motivo la fase di test sui dispositivi mobile è stata eseguita minuziosamente e parallelamente alla fase di test per il desktop.
+	
+	\subsection{Test per l'accessibilità}
+	% aggiungere frase introduttiva
+	A partire dalla struttura in HTML si è cercato di rendere più efficiente la navigazione del sito tramite l'inserimento gli attributi "tabindex", per dare un ordine prioritario alle tabulazioni e permettere di saltare agevolmente sezioni della pagina tramite l'utilizzo di ancore. Tutte le immagini sono state marcate con appositi tag alt per la comprensione delle immagini anche a chi non può vedere. Inoltre ogni link è distinguibile dagli altri elementi tramite la sottolineatura e viene visualizzato in colori diversi in se ancora da visitare o già visitato. Un ulteriore aiuto viene fornito dai breadcrumb, che permette all'utente di capire in che parte del sito si trova. Per quanto riguarda l'accessibilità per alcune categorie di utenza con relative difficoltà visive si è scelto di mantenere sempre un alto contrasto tra il colore di sfondo ed il colore delle scritte, per non intaccare la leggibilità delle ultime.\\
+	In particolare sono stati eseguiti dei test di cui si riportano di seguito alcune immagini di viste delle pagine del sito realizzato con la simulazione di diverse tipologie di daltonismo. Tali immagini sono state generate con l'utilizzo del simulatore Coblis, disponibile online al link \url{https://www.color-blindness.com/coblis-color-blindness-simulator/}.
+	
+	\includegraphics[width=35pc]{./img/}
+	\captionof{figure}{}
 
 \pagebreak
