--- a/Relazione/sezioni/ValidazioneTest.tex
+++ b/Relazione/sezioni/ValidazioneTest.tex
@@ -24,9 +24,9 @@ Sono stati effettuati test manuali anche per la versione mobile utilizzando diff
 \begin{itemize}
 	% per favore aggiungete il vostro dispositivo
 	\item Asus Zenfone 3 Max, con sistema operativo Android 7.0;
-	\item Blackview bv9000, con sistema operativo Android 7.1.1 ;
-	\item ;
-	\item .
+	\item Blackview bv9000, con sistema operativo Android 7.1.1;
+	\item Huawei P20 Lite, con sistema operativo Android 9.0;
+	\item Apple iPhone XS, con sistema operativo iOs 13.4.1.
 \end{itemize}
 L’usabilità del sito web rimane invariata, essendo quest’ultimo responsive, anche se presenta layout o comportamenti differenti per cause che dipendono dal sistema operativo. Per tale motivo la fase di test sui dispositivi mobile è stata eseguita minuziosamente e parallelamente alla fase di test per il desktop.
 
