aggiunte immagini simulazione daltonismo

--- a/Relazione/sezioni/ValidazioneTest.tex
+++ b/Relazione/sezioni/ValidazioneTest.tex
@@ -33,9 +33,18 @@ L’usabilità del sito web rimane invariata, essendo quest’ultimo responsive,
 \subsection{Test per l'accessibilità}
 % aggiungere frase introduttiva
 A partire dalla struttura in HTML si è cercato di rendere più efficiente la navigazione del sito tramite l'inserimento gli attributi "tabindex", per dare un ordine prioritario alle tabulazioni e permettere di saltare agevolmente sezioni della pagina tramite l'utilizzo di ancore. Tutte le immagini sono state marcate con appositi tag alt per la comprensione delle immagini anche a chi non può vedere. Inoltre ogni link è distinguibile dagli altri elementi tramite la sottolineatura e viene visualizzato in colori diversi in se ancora da visitare o già visitato. Un ulteriore aiuto viene fornito dai breadcrumb, che permette all'utente di capire in che parte del sito si trova. Per quanto riguarda l'accessibilità per alcune categorie di utenza con relative difficoltà visive si è scelto di mantenere sempre un alto contrasto tra il colore di sfondo ed il colore delle scritte, per non intaccare la leggibilità delle ultime.\\
-In particolare sono stati eseguiti dei test di cui si riportano di seguito alcune immagini di viste delle pagine del sito realizzato con la simulazione di diverse tipologie di daltonismo. Tali immagini sono state generate con l'utilizzo del simulatore Coblis, disponibile online al link \url{https://www.color-blindness.com/coblis-color-blindness-simulator/}.
+In particolare sono stati eseguiti dei test di cui si riportano di seguito alcune immagini di viste delle pagine del sito realizzato con la simulazione di diverse tipologie di daltonismo. Tali immagini sono state generate con l'utilizzo del simulatore Coblis, disponibile online al link \url{https://www.color-blindness.com/coblis-color-blindness-simulator/}.\\
 
-%\includegraphics[width=35pc]{./img/}
-%\captionof{figure}{}
+\captionof{figure}{Homepage del sito}
+\includegraphics[width=8pc]{./img/homepage-normal.png} \includegraphics[width=8pc]{./img/homepage-protanopia.png} \includegraphics[width=8pc]{./img/homepage-deuteranopia.png} \includegraphics[width=8pc]{./img/homepage-tritanopia.png}\\
+
+\captionof{figure}{Pagina di accesso all'area personale con messaggio di errore}
+\includegraphics[width=8pc]{./img/pagina_accesso_errore-normal.png} \includegraphics[width=8pc]{./img/pagina_accesso_errore-protanopia.png} \includegraphics[width=8pc]{./img/pagina_accesso_errore-deuteranopia.png} \includegraphics[width=8pc]{./img/pagina_accesso_errore-tritanopia.png}\\
+
+\captionof{figure}{Pagina con la lista di tutti i veicoli in vendita con messaggio di successo}
+\includegraphics[width=8pc]{./img/pagina_lista_veicoli_vendita-successo-normal.png} \includegraphics[width=8pc]{./img/pagina_lista_veicoli_vendita-successo-protanopia.png} \includegraphics[width=8pc]{./img/pagina_lista_veicoli_vendita-successo-deuteranopia.png} \includegraphics[width=8pc]{./img/pagina_lista_veicoli_vendita-successo-tritanopia.png}\\
+
+\captionof{figure}{Pagina per la modifica delle informazioni personali dell'utente registrato}
+\includegraphics[width=8pc]{./img/pagina_modifica_info_utente-normal.png} \includegraphics[width=8pc]{./img/pagina_modifica_info_utente-protanopia.png} \includegraphics[width=8pc]{./img/pagina_modifica_info_utente-deuteranopia.png} \includegraphics[width=8pc]{./img/pagina_modifica_info_utente-tritanopia.png}\\
 
 \pagebreak
