--- a/Relazione/import/first-page.tex
+++ b/Relazione/import/first-page.tex
@@ -18,11 +18,11 @@
 \begin{table}[H]
 	\hspace{3.5cm}
 	\renewcommand{\arraystretch}{1.4}
-	\begin{tabular}{l | l}
-		\textbf{Componenti} & Conte Riccardo 1121274\\
-		& Corrò Giacomo 1122451\\
-		& Fiorese Giulia 1125551\\
-		& Tabacchi Erik 1124624\\
+	\begin{tabular}{l | l  l}
+		\textbf{Componenti} & Conte Riccardo & 1121274\\
+		& Corrò Giacomo & 1122451\\
+		& Fiorese Giulia & 1125551\\
+		& Tabacchi Erik & 1124624\\
 	\end{tabular}
 \end{table}
 \end{center}
