--- a/Relazione/sezioni/Presentazione.tex
+++ b/Relazione/sezioni/Presentazione.tex
@@ -12,14 +12,35 @@
         \subsubsection{Menu mobile}
         Le voci del menu saranno nascoste, per visualizzarle basterà cliccare sul burger menu in alto a destra ed esse compariranno in un menu a tendina.
 
+        \begin{center}
+            \includegraphics[width=16pc, height=3pc]{./img/MenuDesktop.png} \includegraphics[width=16pc, height=3pc]{./img/MenuMobile.png}
+            \captionof{figure}{Visualizzazione menu da desktop vs menu da mobile}
+        \end{center}
+
         \subsubsection{Home mobile}
         Nella Home l'immagine della concessionaria non viene più visualizzata affianco al testo ma sopra di esso.
 
+        \begin{center}
+            \includegraphics[width=22pc, height=13pc]{./img/HomeDesktop.png} \includegraphics[width=10pc, height=16pc]{./img/HomeMobile.png}
+            \captionof{figure}{Visualizzazione Home da desktop vs Home da mobile}
+        \end{center}
+
         \subsubsection{Veicoli a noleggio e Veicoli in vendita mobile}
         I vari filtri di ricerca per le auto verranno visualizzati in blocchi quindi ognuno occuperà un intera riga inclusi il bottone per il submit è quello per ricaricare la pagina.
+        
+        \begin{center}
+            \includegraphics[width=22pc, height=10pc]{./img/VeicoliNoleggioDesktop.png} \includegraphics[width=10pc, height=16pc]{./img/VeicoliNoleggioMobile.png}
+            \captionof{figure}{Visualizzazione filtri di Veicoli a noleggio da desktop vs filtri di Veicoli a noleggio da mobile}
+        \end{center}
 
         \subsubsection{Area personale ed Area amministratore}
         Il menu utente ed il menu amministratore non saranno più alla sinistra del contenuto ma sopra di esso.
+
+        \begin{center}
+            \includegraphics[width=20pc, height=12pc]{./img/AreaAmministratoreDesktop.png} \includegraphics[width=12pc, height=16pc]{./img/AreaAmministratoreMobile.png}
+            \captionof{figure}{Visualizzazione Area Amministratore da desktop vs Area Amministratore da mobile}
+        \end{center}
+
     
     \subsection{CSS Print}
         Il compito di gestire la presentazione della maggior parte delle pagine durante la stampa è stato affidato al file cssPrint.css, esso elimina tutti gli elementi visivi non necessari durante una stampa come il logo, il footer, i menu, i colori di background e le immagini che non hanno valore informativo in modo da ottenere un stampa il più efficiente possibile.
