--- a/Relazione/sezioni/Presentazione.tex
+++ b/Relazione/sezioni/Presentazione.tex
@@ -43,7 +43,7 @@
 
     
     \subsection{CSS Print}
-        Il compito di gestire la presentazione della maggior parte delle pagine durante la stampa è stato affidato al file cssPrint.css, esso elimina tutti gli elementi visivi non necessari durante una stampa come il logo, il footer, i menu, i colori di background e le immagini che non hanno valore informativo in modo da ottenere un stampa il più efficiente possibile.
+        Il compito di gestire la presentazione della maggior parte delle pagine durante la stampa è stato affidato al file cssPrint.css, esso elimina tutti gli elementi visivi non necessari durante una stampa come il logo, il footer, i menu, i colori di background e le immagini ritenute superflue in modo da ottenere un stampa il più efficiente possibile.
         Vi sono inoltre alcune pagine a cui sono stati dedicati dei fogli di stile aggiuntivi per gestire situazioni di stampa a loro specifiche.
 
     \begin{center}
