--- a/Relazione/sezioni/FaseDiImplementazione.tex
+++ b/Relazione/sezioni/FaseDiImplementazione.tex
@@ -1,13 +1,16 @@
 \section{Fase di Implementazione}
 
-Il punto di partenza dello sviluppo è stato la creazione del Database in SQL e delle pagine in HTML, definendo header, footer e menu congiuntamente, e le singole pagine separatamente. Sin da questo momento il codice HTML è stato ripetutamente validato ad ogni suo aggiornamento. Successivamente le pagine HTML sono state convertite in pagine PHP nelle quali il contenuto viene generato a partire dal database.
+Il punto di partenza dello sviluppo è stato la creazione del Database in SQL e delle pagine in HTML, definendo header, footer e menu congiuntamente, e le singole pagine separatamente. Sin da questo momento il codice HTML è stato ripetutamente validato ad ogni suo aggiornamento. Successivamente le pagine HTML sono state convertite in pagine PHP.
+La componente PHP risulta sicuramente come la più corposa del sito in quanto viene utilizzata non solo per i controlli, ma anche per la generazione della struttura delle pagine e le interazioni con il database.
+Generare la struttura tramite PHP permette numerosi vantaggi, come:
+\begin{itemize}
+    \item Il contenuto del sito rispecchia sempre il Database grazie alle estrazioni presenti nelle pagine PHP.
+    \item Il sito è più mantenibile poiché le parti comuni alle pagine del sito sono scritte tramite una sola funzione PHP.
+    \item Tramite la sostituzione di stringhe è possibile cambiare il codice HTML, ad esempio per togliere i link circolari.
+\end{itemize}
 Il passo successivo è stato appunto scrivere tali funzioni PHP per l’interazione con il database e la conseguente resa delle pagine, divise a seconda dell'ambito dell'estrazione in diversi file "funzioni". Completano la parte PHP altri file atti a interazioni più specifiche, quali salvataggi ed eliminazioni di dati, controllo degli input, invio di messaggi e login.
 Ciò ha reso l’attività di debug molto più veloce e mirata ma ha anche permesso di gestire al meglio eventuali errori di inserimento dei dati da parte dell’utente, fornendo messaggi d’errore precisi. In seguito, i controlli sulla validità degli input dei form, sono stati tradotti in JavaScript, in modo da effettuare un primo controllo client side.
+Infatti il linguaggio JavaScript è stato utilizzato principalmente per la validazione e per la visualizzazione del menù con dispositivi mobile o schermi di piccole dimensioni; inoltre viene impiegato per il calcolo dell'importo, il controllo delle date dei noleggi, il pulsante "scroll-up" atto a facilitare la navigazione e il conrollo IFrame per la visualizzazione della mappa.
 L’ultima parte della realizzazione è stata aggiungere la presentazione al sito tramite fogli CSS, avendo cura che la visualizzazione del sito fosse la stessa su vari dispositivi desktop. Per quando riguarda l’aspetto mobile, abbiamo apportato modifiche di layout in modo da rendere il sito accessibile anche da smartphone.
-Tra gli strumenti utilizzati dai componenti del gruppo per l'implementazione si evidenziano:
-\begin{itemize}
-    \item Git e Github: il noto tool di versionamento e relativo servizio di hosting sono stati essenziali per lo sviluppo concorrente del sito web.
-    \item Visual Studio Code: l'IDE scelto per la stesura del codice, che rende disponibili in particolare controlli di sintassi, supporto per debugging e interfaccia per git.
-    \item XAMPP: una piattaforma necessaria ad interpretare pagine web dinamiche, e quindi a testare il sito nella sua interezza.
-\end{itemize}
+
 \pagebreak
