--- a/Relazione/sezioni/SuddivisioneLavoro.tex
+++ b/Relazione/sezioni/SuddivisioneLavoro.tex
@@ -3,11 +3,11 @@ Di seguito si elencano le parti realizzate da ciascun componente del gruppo:
 \begin{itemize}
     \item Conte Riccardo:
         \begin{enumerate}
-        \item pagine HTML: ;
-        \item CSS pagine HTML ;
-        \item script PHP: ;
-        \item pagine PHP: ;
-        \item funzioni JS: .
+        \item pagine HTML: areaPrivata, login, registrati;
+        \item CSS pagine HTML: cssUtente;
+        \item script PHP: accessoLogin, conrolloInput, funzioniUtente, logout, registrazione, setDatiUtente;
+        \item pagine PHP: areaPrivata, login, registrati;
+        \item funzioni JS: controlliClient.
         \end{enumerate}
     \item Corrò Giacomo:
         \begin{enumerate}
@@ -38,9 +38,9 @@ Di seguito si elencano le parti realizzate da ciascun componente del gruppo:
 Per quanto riguarda la relazione, ognuno ha scritto la parte di analisi relativa alla propria sezione del sito. Le parti generali della relazione sono state scritte da tutti i membri del gruppo.
 Vengono elencate nel dettaglio le varie parti:
 \begin{itemize}
-    \item Riccardo Conte: 
-    \item Giacomo Corrò: 
-    \item Giulia Fiorese: sezione 1 Introduzione, parte della sezione 3.3 Accessibilità, sezione 7 Validazione e Fase di Test; 
+    \item Riccardo Conte:
+    \item Giacomo Corrò:
+    \item Giulia Fiorese: sezione 1 Introduzione, parte della sezione 3.3 Accessibilità, sezione 7 Validazione e Fase di Test;
     \item Erik Tabacchi:
 \end{itemize}
 Tutte le parti della relazione non elencate sono state scritte durante gli incontri, quindi tutto il gruppo ha preso parte alla stesura.
