aggiunto cosa ho fatto

--- a/Relazione/sezioni/SuddivisioneLavoro.tex
+++ b/Relazione/sezioni/SuddivisioneLavoro.tex
@@ -5,7 +5,7 @@ Di seguito si elencano le parti realizzate da ciascun componente del gruppo:
         \begin{enumerate}
         \item pagine HTML: areaPrivata, login, registrati;
         \item CSS pagine HTML: cssUtente;
-        \item script PHP: accessoLogin, conrolloInput, funzioniUtente, logout, registrazione, setDatiUtente;
+        \item script PHP: accessoLogin, controlloInput, funzioniUtente, logout, registrazione, setDatiUtente;
         \item pagine PHP: areaPrivata, login, registrati;
         \item funzioni JS: controlliClient.
         \end{enumerate}
@@ -39,7 +39,7 @@ Per quanto riguarda la relazione, ognuno ha scritto la parte di analisi relativa
 Vengono elencate nel dettaglio le varie parti:
 \begin{itemize}
     \item Riccardo Conte:
-    \item Giacomo Corrò:
+    \item Giacomo Corrò: sezione 2.1 Utenza, parte della sezione 2.2 Casi d'uso , sezione 3 Progettazione.
     \item Giulia Fiorese: sezione 1 Introduzione, parte della sezione 3.3 Accessibilità, sezione 7 Validazione e Fase di Test;
     \item Erik Tabacchi:
 \end{itemize}
