--- a/Relazione/import/first-page.tex
+++ b/Relazione/import/first-page.tex
@@ -33,7 +33,7 @@
 	\textbf{\Large{Informazioni sul sito}}\\
 	\textbf{Indirizzo sito web} \\ \url{http://tecweb1920.studenti.math.unipd.it/gcorr}\\
 	\textbf{Indirizzo sito web da da fuori Dipartimento} \\ \url{http://localhost:8080/gcorr}\\
-	\textbf{Email referente gruppo:} \\ giacomo.corro@studenti.math.unipd.it \\
+	\textbf{Email referente gruppo:} \\ giacomo.corro@studenti.unipd.it \\
 	\textbf{Repository pubblica:} \\ \url{https://github.com/TheJack95/progettoTecnologieWeb2019-2020_v2}\\
 	\renewcommand{\arraystretch}{1.8}
 	\rowcolors{3}{yellow!100!black!15}{}
