--- a/Relazione/import/first-page.tex
+++ b/Relazione/import/first-page.tex
@@ -44,7 +44,7 @@
 		\multicolumn{1}{c}{\color[HTML]{FFFFFF} \textbf{Email}} &
 		\multicolumn{1}{c}{\color[HTML]{FFFFFF} \textbf{Password}} \\
 		\endhead
-		\textbf{Admin} & admin@admin.com & admin\\
-		\textbf{Utente} & utente@utente.com & utente\\
+		\textbf{Admin} & admin & admin\\
+		\textbf{Utente} & user & user\\
 	\end{longtable}
 \end{center}
