--- a/Relazione/relazione.tex
+++ b/Relazione/relazione.tex
@@ -7,6 +7,8 @@
 	\tableofcontents \pagebreak
 	\listoffigures \pagebreak
 
+	\input{import/notes} \pagebreak
+
 	\input{sezioni/Introduzione.tex}
 	\input{sezioni/Analisi.tex}
 	\input{sezioni/FaseDiProgettazione.tex}
