fix introduzione relazione

--- a/Relazione/sezioni/Introduzione.tex
+++ b/Relazione/sezioni/Introduzione.tex
@@ -1,9 +1,13 @@
 \section{Introduzione}
 
 \subsection{Abstract}
-Il progetto Concessionaria GREG vuole implementare un sito Internet che offra la possibilità di fornire informazioni riguardo i prodotti disponibili, suddivisi in veicoli a noleggio e veicoli in vendita, i contatti, l'ubicazione. Il sito permette di inserire, modificare ed eliminare i prodotti: queste operazioni sono permesse solamente ad un utente privilegiato, mentre tutti gli altri utenti saranno visitatori normali a cui viene garantita la visualizzazione delle pagine del sito consentite. Inoltre deve essere garantita l'accessibilità in modo che chiunque possa navigare nel sito serenamente. Una volta garantita l'accessibilità, si vuole focalizzare l'attenzione sull'usabilità, rispettando gli standard W3C e la separazione tra struttura, presentazione e comportamento. L'obiettivo del sito Internet è garantire una navigazione e ricerca fluida degli utenti all'interno del sito, in modo da evitare il disorientamento e, nel caso dovesse succedere, garantire supporto per tornare all'interno del sito.
+Il sito "Concessionaria GREG" vuole offrire la possibilità a tutti i visitatori di ricevere informazioni riguardo i servizi offerti, le vetture disponibili, suddivisi in veicoli a noleggio e veicoli in vendita, i contatti e l'ubicazione.\\
+Il sito permette di inserire, modificare ed eliminare i prodotti: queste operazioni sono permesse solamente ad un utente privilegiato, mentre tutti gli altri utenti saranno visitatori normali a cui viene garantita la visualizzazione delle pagine del sito consentite. Viene ricercata l'accessibilità in modo che chiunque possa navigare nel sito serenamente; una volta garantita tale, si vuole focalizzare l'attenzione sull'usabilità, rispettando gli standard W3C e la separazione tra struttura, presentazione e comportamento.\\
+L'obiettivo finale del progetto è garantire una navigazione fluida degli utenti all'interno del sito, in modo da evitare il disorientamento e, nel caso dovesse succedere, garantire supporto per tornare all'interno del sito o dell'area cercata.\\
+\\
+\textbf{Il nome "Concessionaria GREG"}: in fase di progettazione è stato scelto il nome "Concessionaria GREG" in modo arbitrario, senza riferimento a persone o luoghi fisici, pertanto è da considerarsi un semplice nome.\\
 
 \subsection{Analisi d'utenza}
-Le informazioni sono fornite dal sito tramite l'utilizzo di un linguaggio informale e comprensibile così da poter essere fruibile una vasta cerchia di pubblico. Vengono forniti tutti i contatti utili per comunicare con lo staff in caso di necessità. Concessionaria GREG si rivolge in particolar modo ad utenti interessati all'acquisto o al noleggio di una vettura.
+Le informazioni sono fornite dal sito tramite l'utilizzo di un linguaggio informale e comprensibile a tutti così da poter essere fruibile ad una vasta cerchia di pubblico. Vengono forniti tutti i contatti utili per comunicare con i gestori del sito in caso di necessità. Concessionaria GREG si rivolge in particolar modo ad utenti interessati all'acquisto o al noleggio di vetture.\\
 
 \pagebreak
